# slide-transition-detector-v1

./: .gitignore  README.md  aiml lab ppt.pptx  pyproject.toml
output/: results.json
src/: main.py
src/utils/: ocr_engine.py  slide_detecter.py  slide_detector.py
src/utils/Histogram_based/: ocr_engine.py
